<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/fragment1_tv_forgetfulbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgetfulbar"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <ProgressBar
                    android:id="@+id/fragment1_pb_forgetfulbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:max="100"
                    android:progress="20" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#afafaf" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/fragment1_tv_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="05：45：30"
                    android:textColor="@color/black"
                    android:textSize="28sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#afafaf" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graduate_time"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/fragment1_tv_graduate_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="05：45：30"
                    android:textColor="@color/black"
                    android:textSize="28sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#afafaf" />
        </LinearLayout>

        <Button
            android:id="@+id/fragment1_btn_switch"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/button_green2"
            android:text="@string/switch1"
            android:textSize="18sp"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>