<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        
        <TextView 
            android:id="@+id/main_tv_forgetfulbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetfulbar"
            android:textSize="17sp"
            android:textColor="@color/black"/>
        
        <ProgressBar 
            android:id="@+id/main_pb_forgetfulbar"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="100"
            android:progress="20"
            />
    </LinearLayout>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#afafaf"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/runtime"
            android:textSize="17sp"
            android:textColor="@color/black"/>
        
        <TextView 
            android:id="@+id/main_tv_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="05：45：30"
            android:textSize="28sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#afafaf"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graduate_time"
            android:textSize="17sp"
            android:textColor="@color/black"/>
        
        <TextView 
            android:id="@+id/main_tv_graduate_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="05：45：30"
            android:textSize="28sp"
            android:textColor="@color/black"/>
    </LinearLayout>
	
     <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#afafaf"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
     
</LinearLayout>
